--- a/src/resource/fxml/login.fxml
+++ b/src/resource/fxml/login.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -8,24 +9,33 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<GridPane alignment="center" hgap="10" prefHeight="450.0" prefWidth="800.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="xin.yiliya.controller.Login">
-   <columnConstraints>
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-   </rowConstraints>
+<GridPane fx:id="gridPane" alignment="center" hgap="10" prefHeight="450.0" prefWidth="800.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="xin.yiliya.controller.Login">
    <children>
-      <TextField fx:id="number" maxHeight="50.0" maxWidth="600.0" minHeight="50.0" minWidth="600.0" promptText="账号" GridPane.rowIndex="1">
+      <TextField fx:id="number" maxHeight="50.0" maxWidth="600.0" minHeight="50.0" minWidth="600.0" onMouseClicked="#focusNumber" promptText="账号" style="-fx-border-color: #3498db;" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <font>
             <Font name="Microsoft YaHei" size="15.0" />
          </font>
       </TextField>
-      <Button maxHeight="50.0" maxWidth="600.0" minHeight="50.0" minWidth="600.0" mnemonicParsing="false" onAction="#isLogin" style="-fx-background-color: #3498db;" text="登录" textFill="WHITE" GridPane.rowIndex="3" />
-      <PasswordField fx:id="password" maxHeight="50.0" maxWidth="600.0" minHeight="50.0" minWidth="600.0" promptText="密码" GridPane.rowIndex="2" />
+      <Button maxHeight="50.0" maxWidth="600.0" minHeight="50.0" minWidth="600.0" mnemonicParsing="false" onAction="#isLogin" style="-fx-background-color: #3498db;" text="登录" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <PasswordField fx:id="password" maxHeight="50.0" maxWidth="600.0" minHeight="50.0" minWidth="600.0" onMouseClicked="#focusPassword" promptText="密码" style="-fx-border-color: #3498db;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <Label alignment="CENTER" maxWidth="820.0" minWidth="820.0" prefHeight="360.0" prefWidth="800.0" styleClass="login-title" text="腾 讯 Q Q" textFill="WHITE">
+         <font>
+            <Font name="Microsoft YaHei Bold" size="62.0" />
+         </font>
+      </Label>
    </children>
+   <columnConstraints>
+      <ColumnConstraints maxWidth="100.0" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints />
+      <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+      <RowConstraints minHeight="30.0" prefHeight="30.0" />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints minHeight="30.0" prefHeight="30.0" />
+      <RowConstraints />
+   </rowConstraints>
 </GridPane>
