--- a/src/resource/fxml/personal.fxml
+++ b/src/resource/fxml/personal.fxml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="500.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="xin.yiliya.controller.Personal">
+<?import javafx.scene.control.Label?>
+<AnchorPane prefHeight="500.0" prefWidth="300.0" minWidth="300.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="xin.yiliya.controller.Personal" AnchorPane.rightAnchor="0">
    <children>
-      <ImageView fx:id="userimg" fitHeight="250.0" fitWidth="300.0" layoutX="1.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="250.0" fitWidth="320.0">
+         <image>
+            <Image  url="@../image/head1.jpg"/>
+         </image>
+      </ImageView>
       <Text fx:id="userNameB" layoutY="286.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kamimin" textAlignment="CENTER" wrappingWidth="300.0" AnchorPane.topAnchor="260.0">
          <font>
             <Font name="System Bold" size="25.0" />
@@ -19,47 +25,47 @@
             <Font size="12.0" />
          </font>
       </Text>
-      <Text fill="#aea9a9" layoutX="84.0" layoutY="345.0" strokeType="OUTSIDE" strokeWidth="0.0" text="账号" AnchorPane.topAnchor="335.0">
+      <Text fill="#aea9a9" layoutX="108.0" layoutY="342.0" strokeType="OUTSIDE" strokeWidth="0.0" text="账号" AnchorPane.leftAnchor="105.0" AnchorPane.topAnchor="340.0">
          <font>
             <Font size="12.0" />
          </font>
       </Text>
-      <Text fill="#aea9a9" layoutX="84.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text="昵称" AnchorPane.topAnchor="360.0">
+      <Text fill="#aea9a9" layoutX="108.0" layoutY="370.0" strokeType="OUTSIDE" strokeWidth="0.0" text="昵称" AnchorPane.leftAnchor="105.0" AnchorPane.topAnchor="365.0">
          <font>
             <Font size="12.0" />
          </font>
       </Text>
-      <Text fill="#aea9a9" layoutX="84.0" layoutY="391.0" strokeType="OUTSIDE" strokeWidth="0.0" text="性别" AnchorPane.topAnchor="385.0">
+      <Text fill="#aea9a9" layoutX="108.0" layoutY="395.0" strokeType="OUTSIDE" strokeWidth="0.0" text="性别" AnchorPane.leftAnchor="105.0" AnchorPane.topAnchor="390.0">
          <font>
             <Font size="12.0" />
          </font>
       </Text>
-      <Text fill="#aea9a9" layoutX="72.0" layoutY="417.0" strokeType="OUTSIDE" strokeWidth="0.0" text="出生年月" AnchorPane.topAnchor="410.0">
+      <Text fill="#aea9a9" layoutX="93.0" layoutY="426.0" strokeType="OUTSIDE" strokeWidth="0.0" text="出生年月" AnchorPane.leftAnchor="93.0" AnchorPane.topAnchor="413.8125">
          <font>
             <Font size="12.0" />
          </font>
       </Text>
-      <Text fx:id="userAccount" layoutX="134.0" layoutY="343.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1137724797" AnchorPane.topAnchor="335.0">
+      <Text fx:id="userAccount" layoutX="150.0" layoutY="341.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1137724797" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="340.0">
          <font>
             <Font size="12.0" />
          </font>
       </Text>
-      <Text fx:id="userName" layoutX="134.0" layoutY="368.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kamimin" AnchorPane.topAnchor="360.0">
+      <Text fx:id="userName" layoutX="150.0" layoutY="371.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kamimin" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="365.0">
          <font>
             <Font size="12.0" />
          </font>
       </Text>
-      <Text fx:id="userGender" layoutX="134.0" layoutY="389.0" strokeType="OUTSIDE" strokeWidth="0.0" text="男" AnchorPane.topAnchor="385.0">
+      <Text fx:id="userGender" layoutX="153.0" layoutY="396.0" strokeType="OUTSIDE" strokeWidth="0.0" text="男" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="390.0">
          <font>
             <Font size="12.0" />
          </font>
       </Text>
-      <Text fx:id="userBirth" layoutX="132.0" layoutY="415.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1996-12-27" AnchorPane.topAnchor="410.0">
+      <Text fx:id="userBirth" layoutX="152.0" layoutY="420.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1996-12-27" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="415.0">
          <font>
             <Font size="12.0" />
          </font>
       </Text>
-      <Button layoutX="63.0" layoutY="439.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="177.0" style="-fx-background-color: #3498db;" text="修改" textFill="WHITE">
+      <Button layoutX="62.0" layoutY="435.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="177.0" style="-fx-background-color: #3498db;" text="修改" textFill="WHITE" AnchorPane.topAnchor="440.0" onMouseClicked="#changeP">
          <font>
             <Font size="12.0" />
          </font>
