--- a/src/resource/fxml/search.fxml
+++ b/src/resource/fxml/search.fxml
@@ -10,9 +10,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.image.Image?>
 <AnchorPane maxHeight="380.0" maxWidth="600.0" minHeight="380.0" minWidth="600.0" prefHeight="380.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="xin.yiliya.controller.Search">
    <children>
-      <Text layoutX="251.0" layoutY="34.0" stroke="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="找好友" textAlignment="CENTER" wrappingWidth="100.0">
+      <Text focusTraversable="true" layoutX="251.0" layoutY="34.0" stroke="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="找好友" textAlignment="CENTER" wrappingWidth="100.0">
          <font>
             <Font size="20.0" />
          </font>
@@ -25,40 +26,18 @@
             <Insets left="10.0" right="10.0" />
          </padding>
       </TextField>
-      <Button fx:id="search_button" layoutX="465.0" layoutY="83.0" mnemonicParsing="false" onMouseClicked="#searchP" prefHeight="37.0" prefWidth="118.0" style="-fx-background-color: #3498db; -fx-font-size: 15;" text="查找" textAlignment="CENTER" textFill="WHITE" />
-      <ScrollPane fx:id="search_main" hbarPolicy="NEVER" layoutX="1.0" layoutY="180.0" prefHeight="200.0" prefWidth="600.0" style="-fx-background-color: transparent; -fx-fit-to-width: 100%;" AnchorPane.leftAnchor="0.0">
+      <Button fx:id="search_button" layoutX="465.0" layoutY="83.0" mnemonicParsing="false" onMouseClicked="#searchP" onMouseEntered="#mouseEnter" onMouseExited="#mouseExited" prefHeight="37.0" prefWidth="118.0" style="-fx-background-color: #3498db; -fx-font-size: 15;" text="查找" textAlignment="CENTER" textFill="WHITE" />
+      <ScrollPane fx:id="search_main" hbarPolicy="NEVER" layoutX="1.0" layoutY="180.0" prefHeight="200.0" prefWidth="600.0" style="-fx-background-color: transparent" AnchorPane.leftAnchor="0.0">
          <content>
             <FlowPane fx:id="searchFlow" prefWidth="600.0" prefWrapLength="0.0">
                <children>
                   <AnchorPane prefHeight="100.0" prefWidth="200.0" styleClass="search_all">
                      <children>
-                        <ImageView fitHeight="80.0" fitWidth="80.0" layoutX="26.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true" styleClass="search_img" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
-                        <Text layoutX="107.0" layoutY="29.0" nodeOrientation="LEFT_TO_RIGHT" stroke="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="search_name" text="Kaimimin" wrappingWidth="100.0" AnchorPane.leftAnchor="95.0" AnchorPane.topAnchor="15.0">
-                           <font>
-                              <Font name="System Bold" size="12.0" />
-                           </font>
-                        </Text>
-                        <Text layoutX="90.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="search_id" text="1137724797" wrappingWidth="100.0" AnchorPane.leftAnchor="94.0" AnchorPane.topAnchor="30.0">
-                           <font>
-                              <Font size="12.0" />
-                           </font>
-                        </Text>
-                        <Text fill="#867f7f" layoutX="92.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="search_address" text="浙江 衢州" wrappingWidth="100.0" AnchorPane.leftAnchor="95.0" AnchorPane.topAnchor="50.0">
-                           <font>
-                              <Font size="12.0" />
-                           </font>
-                        </Text>
-                        <Button layoutX="94.0" layoutY="67.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="66.0" style="-fx-background-color: #3498db;" styleClass="search_addbtn" text="加好友" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="95.0" AnchorPane.topAnchor="67.0">
-                           <font>
-                              <Font size="10.0" />
-                           </font>
-                        </Button>
-                     </children>
-                  </AnchorPane>
-
-                  <AnchorPane prefHeight="100.0" prefWidth="200.0" styleClass="search_all">
-                     <children>
-                        <ImageView fitHeight="80.0" fitWidth="80.0" layoutX="26.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true" styleClass="search_img" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
+                        <ImageView fitHeight="80.0" fitWidth="80.0" layoutX="26.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true" styleClass="search_img" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" >
+                           <image>
+                              <Image url="@../image/head.jpg" />
+                           </image>
+                        </ImageView>
                         <Text layoutX="107.0" layoutY="29.0" nodeOrientation="LEFT_TO_RIGHT" stroke="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="search_name" text="Kaimimin" wrappingWidth="100.0" AnchorPane.leftAnchor="95.0" AnchorPane.topAnchor="15.0">
                            <font>
                               <Font name="System Bold" size="12.0" />
