--- a/src/resource/fxml/login.fxml
+++ b/src/resource/fxml/login.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -16,13 +17,18 @@
             <Font name="Microsoft YaHei" size="15.0" />
          </font>
       </TextField>
-      <Button maxHeight="50.0" maxWidth="600.0" minHeight="50.0" minWidth="600.0" mnemonicParsing="false" onAction="#isLogin" style="-fx-background-color: #3498db;" text="登录" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="4" />
       <PasswordField fx:id="password" maxHeight="50.0" maxWidth="600.0" minHeight="50.0" minWidth="600.0" onMouseClicked="#focusPassword" promptText="密码" style="-fx-border-color: #3498db;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <Button maxHeight="50.0" maxWidth="600.0" minHeight="50.0" minWidth="600.0" mnemonicParsing="false" onAction="#isLogin" style="-fx-background-color: #3498db;" text="登录" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="4" />
       <Label alignment="CENTER" maxWidth="820.0" minWidth="820.0" prefHeight="360.0" prefWidth="800.0" styleClass="login-title" text="腾 讯 Q Q" textFill="WHITE">
          <font>
             <Font name="Microsoft YaHei Bold" size="62.0" />
          </font>
       </Label>
+      <Hyperlink maxWidth="100.0" minWidth="100.0" onAction="#goRegist" text="注册账号" textFill="#3498db" GridPane.columnIndex="2" GridPane.rowIndex="2">
+         <font>
+            <Font name="Microsoft YaHei" size="15.0" />
+         </font>
+      </Hyperlink>
    </children>
    <columnConstraints>
       <ColumnConstraints maxWidth="100.0" minWidth="10.0" prefWidth="100.0" />
