--- a/src/resource/fxml/search.fxml
+++ b/src/resource/fxml/search.fxml
@@ -26,7 +26,7 @@
             <Insets left="10.0" right="10.0" />
          </padding>
       </TextField>
-      <Button fx:id="search_button" layoutX="465.0" layoutY="83.0" mnemonicParsing="false" onMouseClicked="#searchP" onMouseEntered="#mouseEnter" onMouseExited="#mouseExited" prefHeight="37.0" prefWidth="118.0" style="-fx-background-color: #3498db; -fx-font-size: 15;" text="查找" textAlignment="CENTER" textFill="WHITE" />
+      <Button fx:id="search_button" layoutX="465.0" layoutY="83.0" mnemonicParsing="false" onMouseClicked="#searchP" onMouseEntered="#mouseEnter" onMouseExited="#mouseExited" prefHeight="37.0" prefWidth="118.0" style="-fx-background-color: #3498db; -fx-font-size: 15" text="查找" textAlignment="CENTER" textFill="WHITE" />
       <ScrollPane fx:id="search_main" hbarPolicy="NEVER" layoutX="1.0" layoutY="180.0" prefHeight="200.0" prefWidth="600.0" style="-fx-background-color: transparent" AnchorPane.leftAnchor="0.0">
          <content>
             <FlowPane fx:id="searchFlow" prefWidth="600.0" prefWrapLength="0.0">
