--- a/src/resource/fxml/index.fxml
+++ b/src/resource/fxml/index.fxml
@@ -40,7 +40,7 @@
             <Font size="10.0" />
          </font>
       </Text>
-      <Text fx:id="seemessage" style="-fx-cursor: hand" layoutX="242.0" layoutY="505.0" strokeType="OUTSIDE" text="≡ 查看消息">
+      <Text fx:id="seemessage" onMouseClicked="#showMessage" style="-fx-cursor: hand" layoutX="242.0" layoutY="505.0" strokeType="OUTSIDE" text="≡ 查看消息">
          <font>
             <Font size="10.0" />
          </font>
