--- a/src/resource/fxml/regist.fxml
+++ b/src/resource/fxml/regist.fxml
@@ -5,45 +5,56 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" prefHeight="800.0" prefWidth="450.0" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="xin.yiliya.controller.Regist">
+<GridPane alignment="center" prefHeight="850.0" prefWidth="450.0" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="xin.yiliya.controller.Regist">
    <children>
-      <Label alignment="BOTTOM_LEFT" maxWidth="400.0" minHeight="270.0" minWidth="470.0" prefHeight="212.0" prefWidth="400.0" styleClass="regist-title" text="   欢迎注册QQ" textFill="WHITE" GridPane.columnSpan="3">
+      <Label alignment="BOTTOM_LEFT" maxWidth="470.0" minHeight="123.0" minWidth="470.0" prefHeight="123.0" prefWidth="470.0" styleClass="regist-title" text="   欢迎注册QQ" textFill="WHITE" GridPane.columnSpan="3">
          <font>
             <Font name="Microsoft YaHei Bold" size="42.0" />
          </font>
       </Label>
-      <TextField fx:id="number" minHeight="50.0" minWidth="400.0" onMouseClicked="#focus" promptText="账号" GridPane.columnIndex="1" GridPane.rowIndex="3">
+      <TextField fx:id="number" minHeight="50.0" minWidth="400.0" onMouseClicked="#focus" promptText="账号" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <font>
             <Font name="Microsoft YaHei" size="15.0" />
          </font>
       </TextField>
-      <PasswordField fx:id="password" maxHeight="50.0" maxWidth="400.0" minHeight="50.0" minWidth="400.0" onMouseClicked="#focus" promptText="密码" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-      <TextField fx:id="name" maxHeight="50.0" maxWidth="400.0" minHeight="50.0" minWidth="400.0" onMouseClicked="#focus" promptText="昵称" GridPane.columnIndex="1" GridPane.rowIndex="5">
+      <PasswordField fx:id="password" maxHeight="50.0" maxWidth="400.0" minHeight="50.0" minWidth="400.0" onMouseClicked="#focus" promptText="密码" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <TextField fx:id="name" maxHeight="50.0" maxWidth="400.0" minHeight="50.0" minWidth="400.0" onMouseClicked="#focus" promptText="昵称" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <font>
             <Font name="Microsoft YaHei" size="15.0" />
          </font></TextField>
-      <TextField fx:id="sex" maxHeight="50.0" maxWidth="400.0" minHeight="50.0" minWidth="400.0" onMouseClicked="#focus" promptText="性别 男/女" GridPane.columnIndex="1" GridPane.rowIndex="6">
+      <TextField fx:id="sex" maxHeight="50.0" maxWidth="400.0" minHeight="50.0" minWidth="400.0" onMouseClicked="#focus" promptText="性别 男/女" GridPane.columnIndex="1" GridPane.rowIndex="4">
          <font>
             <Font name="Microsoft YaHei" size="15.0" />
          </font>
       </TextField>
-      <TextArea fx:id="introduce" maxHeight="100.0" maxWidth="400.0" minHeight="100.0" minWidth="400.0" onMouseClicked="#focus" prefHeight="200.0" prefWidth="200.0" promptText="个性签名" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-      <Button fx:id="regist" maxHeight="50.0" maxWidth="400.0" minHeight="50.0" minWidth="400.0" mnemonicParsing="false" onAction="#finishRegist" style="-fx-background-color: #3498db;" text="注册" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-      <Button fx:id="cancel" maxHeight="50.0" maxWidth="400.0" minHeight="50.0" minWidth="400.0" mnemonicParsing="false" onAction="#returnLogin" style="-fx-background-color: #FFF;" text="取消" GridPane.columnIndex="1" GridPane.rowIndex="10" />
-      <Label fx:id="notice" alignment="CENTER" maxWidth="400.0" minWidth="400.0" textFill="RED" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+      <TextArea fx:id="introduce" maxHeight="100.0" maxWidth="400.0" minHeight="100.0" minWidth="400.0" onMouseClicked="#focus" prefHeight="200.0" prefWidth="200.0" promptText="个性签名" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+      <Button fx:id="regist" maxHeight="50.0" maxWidth="400.0" minHeight="50.0" minWidth="400.0" mnemonicParsing="false" onAction="#finishRegist" style="-fx-background-color: #3498db;" text="注册" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+      <Button fx:id="cancel" maxHeight="50.0" maxWidth="400.0" minHeight="50.0" minWidth="400.0" mnemonicParsing="false" onAction="#returnLogin" style="-fx-background-color: #FFF;" text="取消" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+      <Button alignment="CENTER" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#selectHead" style="-fx-background-color: #3498db;" text="选择头像" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="6">
+         <font>
+            <Font name="Microsoft YaHei" size="15.0" />
+         </font>
+      </Button>
+      <ImageView fx:id="head" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+      <Label fx:id="notice" alignment="CENTER" minWidth="400.0" textFill="RED" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="7">
+         <font>
+            <Font name="Microsoft YaHei" size="15.0" />
+         </font>
+      </Label>
    </children>
    <columnConstraints>
       <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints />
+      <ColumnConstraints maxWidth="200.0" minWidth="200.0" />
+      <ColumnConstraints maxWidth="200.0" minWidth="200.0" prefWidth="100.0" />
       <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints minHeight="250.0" />
       <RowConstraints />
       <RowConstraints />
       <RowConstraints />
@@ -54,6 +65,8 @@
       <RowConstraints />
       <RowConstraints />
       <RowConstraints />
-      <RowConstraints minHeight="70.0" prefHeight="70.0" />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints prefHeight="70.0" />
    </rowConstraints>
 </GridPane>
