--- a/src/resource/fxml/personal.fxml
+++ b/src/resource/fxml/personal.fxml
@@ -10,10 +10,7 @@
 <?import javafx.scene.control.Label?>
 <AnchorPane prefHeight="500.0" prefWidth="300.0" minWidth="300.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="xin.yiliya.controller.Personal" AnchorPane.rightAnchor="0">
    <children>
-      <ImageView fitHeight="250.0" fitWidth="320.0">
-         <image>
-            <Image  url="@../image/head1.jpg"/>
-         </image>
+      <ImageView fx:id="userImage" fitHeight="250.0" fitWidth="320.0">
       </ImageView>
       <Text fx:id="userNameB" layoutY="286.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kamimin" textAlignment="CENTER" wrappingWidth="300.0" AnchorPane.topAnchor="260.0">
          <font>
@@ -40,11 +37,6 @@
             <Font size="12.0" />
          </font>
       </Text>
-      <Text fill="#aea9a9" layoutX="93.0" layoutY="426.0" strokeType="OUTSIDE" strokeWidth="0.0" text="出生年月" AnchorPane.leftAnchor="93.0" AnchorPane.topAnchor="413.8125">
-         <font>
-            <Font size="12.0" />
-         </font>
-      </Text>
       <Text fx:id="userAccount" layoutX="150.0" layoutY="341.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1137724797" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="340.0">
          <font>
             <Font size="12.0" />
@@ -56,11 +48,6 @@
          </font>
       </Text>
       <Text fx:id="userGender" layoutX="153.0" layoutY="396.0" strokeType="OUTSIDE" strokeWidth="0.0" text="男" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="390.0">
-         <font>
-            <Font size="12.0" />
-         </font>
-      </Text>
-      <Text fx:id="userBirth" layoutX="152.0" layoutY="420.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1996-12-27" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="415.0">
          <font>
             <Font size="12.0" />
          </font>
