--- a/src/resource/fxml/changePsl.fxml
+++ b/src/resource/fxml/changePsl.fxml
@@ -25,11 +25,6 @@
             <Font size="13.0" />
          </font>
       </Text>
-      <Text fill="#c9c4c4" layoutX="50.0" layoutY="210.0" strokeType="OUTSIDE" strokeWidth="0.0" text="出生年月" AnchorPane.leftAnchor="40.0">
-         <font>
-            <Font size="13.0" />
-         </font>
-      </Text>
       <TextField fx:id="userName" layoutX="109.0" layoutY="44.0" prefHeight="18.0" prefWidth="170.0" text="Kamimin">
          <font>
             <Font size="10.0" />
@@ -40,17 +35,12 @@
             <Font size="10.0" />
          </font>
       </TextArea>
-      <TextField fx:id="userBirth" layoutX="109.0" layoutY="194.0" prefHeight="18.0" prefWidth="170.0" text="1996-12-27" AnchorPane.leftAnchor="109.0">
-         <font>
-            <Font size="10.0" />
-         </font>
-      </TextField>
       <Button layoutX="40.0" layoutY="246.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="239.0" style="-fx-background-color: #3498db;" text="保存" onMouseClicked="#savechange" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="12.0" />
          </font>
       </Button>
-      <TextField layoutX="109.0" layoutY="164.0" prefHeight="22.0" prefWidth="170.0" text="男" AnchorPane.leftAnchor="109.0" AnchorPane.topAnchor="164.0">
+      <TextField fx:id="userGender" layoutX="109.0" layoutY="164.0" prefHeight="22.0" prefWidth="170.0" text="男" AnchorPane.leftAnchor="109.0" AnchorPane.topAnchor="164.0">
          <font>
             <Font size="10.0" />
          </font>
