--- a/src/resource/fxml/dialog.fxml
+++ b/src/resource/fxml/dialog.fxml
@@ -11,51 +11,51 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane prefHeight="500.0" prefWidth="810.0" style="-fx-background-color: #FFF;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="xin.yiliya.controller.Dialog">
+<GridPane prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: #FFF;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="xin.yiliya.controller.Dialog">
    <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="10.0" />
+      <RowConstraints minHeight="10.0" prefHeight="20.0" />
       <RowConstraints minHeight="20.0" prefHeight="20.0" />
-      <RowConstraints minHeight="55.0" prefHeight="55.0" />
-      <RowConstraints minHeight="10.0" prefHeight="10.0" />
-      <RowConstraints minHeight="250.0" prefHeight="30.0" />
-      <RowConstraints minHeight="10.0" prefHeight="10.0" />
-      <RowConstraints minHeight="100.0" prefHeight="30.0" />
-      <RowConstraints minHeight="10.0" prefHeight="10.0" />
+      <RowConstraints minHeight="80.0" prefHeight="80.0" />
+      <RowConstraints minHeight="20.0" prefHeight="20.0" />
+      <RowConstraints minHeight="350.0" prefHeight="30.0" />
+      <RowConstraints minHeight="20.0" prefHeight="20.0" />
+      <RowConstraints minHeight="120.0" prefHeight="30.0" />
+      <RowConstraints minHeight="20.0" prefHeight="20.0" />
       <RowConstraints minHeight="35.0" prefHeight="35.0" />
    </rowConstraints>
    <columnConstraints>
-      <ColumnConstraints minWidth="20.0" prefWidth="100.0" />
-      <ColumnConstraints minWidth="75.0" prefWidth="100.0" />
-      <ColumnConstraints minWidth="20.0" prefWidth="100.0" />
-      <ColumnConstraints minWidth="145.0" prefWidth="100.0" />
+      <ColumnConstraints minWidth="20.0" prefWidth="20.0" />
       <ColumnConstraints minWidth="100.0" prefWidth="100.0" />
-      <ColumnConstraints minWidth="10.0" prefWidth="10.0" />
+      <ColumnConstraints minWidth="20.0" prefWidth="20.0" />
+      <ColumnConstraints minWidth="230.0" prefWidth="100.0" />
       <ColumnConstraints minWidth="100.0" prefWidth="100.0" />
-      <ColumnConstraints minWidth="10.0" prefWidth="10.0" />
+      <ColumnConstraints minWidth="20.0" prefWidth="20.0" />
       <ColumnConstraints minWidth="100.0" prefWidth="100.0" />
-      <ColumnConstraints minWidth="20.0" prefWidth="100.0" />
-      <ColumnConstraints minWidth="200.0" prefWidth="200.0" />
-      <ColumnConstraints minWidth="10.0" prefWidth="10.0" />
+      <ColumnConstraints minWidth="20.0" prefWidth="20.0" />
+      <ColumnConstraints minWidth="100.0" prefWidth="100.0" />
+      <ColumnConstraints minWidth="20.0" prefWidth="20.0" />
+      <ColumnConstraints minWidth="250.0" prefWidth="250.0" />
+      <ColumnConstraints minWidth="20.0" prefWidth="20.0" />
    </columnConstraints>
    <children>
-      <ImageView fx:id="head" fitHeight="75.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="2" />
-      <Label fx:id="name" minHeight="20.0" minWidth="465.0" text="名字" GridPane.columnIndex="3" GridPane.rowIndex="1">
+      <ImageView fx:id="head" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+      <Label fx:id="name" minHeight="20.0" minWidth="570.0" text="名字" GridPane.columnIndex="3" GridPane.rowIndex="1">
          <font>
             <Font name="Microsoft YaHei" size="15.0" />
          </font>
       </Label>
-      <Label fx:id="introduce" alignment="TOP_LEFT" minHeight="55.0" minWidth="465.0" text="个性签名" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-      <ScrollPane fx:id="scroll" hbarPolicy="NEVER" maxWidth="580.0" minWidth="560.0" prefHeight="250.0" prefWidth="560.0" style="-fx-background-color: #FFF; -fx-border-color: #CCC;" GridPane.columnIndex="1" GridPane.columnSpan="9" GridPane.rowIndex="4">
+      <Label fx:id="introduce" alignment="TOP_LEFT" minHeight="80.0" minWidth="570.0" text="个性签名" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+      <ScrollPane fx:id="scroll" hbarPolicy="NEVER" maxHeight="350.0" maxWidth="710.0" minWidth="710.0" prefHeight="250.0" prefWidth="710.0" style="-fx-background-color: #FFF; -fx-border-color: #CCC;" GridPane.columnIndex="1" GridPane.columnSpan="9" GridPane.rowIndex="4">
          <content>
-            <FlowPane fx:id="container" maxWidth="560.0" minWidth="560.0" prefHeight="250.0" prefWidth="560.0" style="-fx-background-color: #FFF;" vgap="10" />
+            <FlowPane fx:id="container" maxWidth="690.0" minHeight="350.0" minWidth="690.0" prefWidth="690.0" style="-fx-background-color: #FFF;" vgap="10" />
          </content></ScrollPane>
       <TextArea fx:id="content" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="8" GridPane.rowIndex="6" />
       <Button alignment="CENTER" minHeight="35.0" minWidth="100.0" mnemonicParsing="false" onAction="#submit" style="-fx-background-color: #3498db;" text="发送" textFill="WHITE" GridPane.columnIndex="8" GridPane.rowIndex="8" />
       <Button alignment="CENTER" minHeight="35.0" minWidth="100.0" mnemonicParsing="false" onAction="#selectFile" style="-fx-background-color: #FFF; -fx-border-color: #3498db;" text="发送文件" GridPane.columnIndex="6" GridPane.rowIndex="8" />
       <Button alignment="CENTER" minHeight="35.0" minWidth="100.0" mnemonicParsing="false" onAction="#selectImage" style="-fx-background-color: #FFF; -fx-border-color: #3498db;" text="发送图片" GridPane.columnIndex="4" GridPane.rowIndex="8" />
-      <ScrollPane fx:id="scroll2" hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: #CCC;" GridPane.columnIndex="10" GridPane.rowIndex="4" GridPane.rowSpan="3">
+      <ScrollPane fx:id="scroll2" hbarPolicy="NEVER" maxHeight="510.0" minWidth="270.0" prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: #CCC;" GridPane.columnIndex="10" GridPane.rowIndex="4" GridPane.rowSpan="3">
          <content>
-            <FlowPane fx:id="container2" minHeight="360.0" minWidth="200.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FFF;" />
+            <FlowPane fx:id="container2" minHeight="510.0" minWidth="250.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FFF;" />
          </content>
       </ScrollPane>
       <Label text="文件列表" GridPane.columnIndex="10" GridPane.rowIndex="2">
